--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     "require":{
         "php": "^8.0",
         "contao/core-bundle": "^4.13",
-        "google/apiclient": "v2.12.6",
-        "phpmailer/phpmailer": "^6.8.0"
+        "google/apiclient": "v2.12.6"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.0"
